# harvey.j

./: README.md  pyproject.toml
chatapp/: .gitignore  pcconfig.py
chatapp/chatapp/: ChainLoader.py  DataBaseLoader.py  State.py  chatapp.py  const.py  style.py  utils.py
chatapp/chatapp/data/: project_data_카카오싱크.txt
chatapp/chatapp/prompt/: parse_subject.txt  q_step1.txt
logParser/: rxconfig.py
logParser/chat_histories/: dev.json
logParser/logParser/: State.py  logParser.py
logParser/logParser/ChainLoader/: ChainLoader.py
logParser/logParser/DataLoader/: DataLoader.py
logParser/logParser/LargeLangModel/: LargeLangModel.py
logParser/logParser/data/sample/: test_sample.txt
logParser/logParser/data/sample/logs/: bid_sample.txt  win_sample.txt  xmas_serving_sample.txt
logParser/logParser/data/sample/parsing/: bid_log_parsing.txt
logParser/logParser/prompt/: answer_with_feedback.txt  error_fix.txt  identify_keys.txt  log_type.txt  pyspark_parsing_code.txt  pyspark_parsing_code2.txt
logParser/logParser/utils/: const.py  misc.py  utils.py
translator/: .gitignore
translator/translator/: translator.py
