[tool.poetry]
name = "llm-practice"
version = "0.1.0"
description = ""
authors = ["harvey-j <harvey.j@kakaocorp.com>"]
readme = "README.md"
packages = [{include = "llm_practice"}]

[tool.poetry.dependencies]
python = "^3.9.13"
openai = "^0.28.0"
pandas = "^2.1.0"
numpy = "^1.24.1"
requests = "^2.31.0"
tqdm = "^4.66.1"
langchain = "^0.0.250"
pydantic = "^1.10.11"
bs4 = "^0.0.1"
tiktoken = "^0.5.1"
chromadb = "^0.3.23"
google-api-wrapper = "^2.0.0a1"
unstructured = "^0.10.16"
markdown = "^3.4.4"
reflex = "^0.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
